# av-crashes

./: .gitignore  README.md  pyproject.toml  state.json
.github/workflows/: daily-scrape.yml
conductor/: plan.md
data/metadata/: aimotive-collision-report-september-16-2019.json  apollo_101623.json  apollo_autonomous_driving_06292023.json  apollo_autonomous_driving_09062023.json  apple-collision-report-september-19-2019.json  apple_012624.json  apple_021524.json  apple_021722.json  apple_022123.json  apple_022222.json  apple_031522.json  apple_051123.json  apple_061422.json  apple_09262023.json  apple_09272021.json  apple_09292023.json  apple_101022.json  apple_101323.json  apple_102022.json  apple_10232023.json  apple_111121.json  apple_120621.json  apple_122022.json  argo_070821.json  argo_092222.json  argo_101921.json  aurora-innovation-collision-report-january-10-2019.json  aurora-innovation-collision-report-january-14-2020.json  autox_020525_redacted.json  beepinc_08232023.json  collision-report-zoox-december-19-2019.json  collision-report-zoox-december-20-2019.json  collision-report-zoox-january-13-2020.json  collision-report-zoox-january-14-2020.json  collision-report-zoox-january-21-2020-2.json  collision-report-zoox-january-21-2020.json  collision-report-zoox-january-8-2020.json  collision-report-zoox-july-23-2019.json  collision-report-zoox-june-11-2019.json  collision-report-zoox-june-19-2019.json  (+741 more)
src/av_collisions/: __init__.py  bluesky.py  fetcher.py  main.py  pdf_parser.py  state_manager.py
